--- a/base.css
+++ b/base.css
@@ -146,15 +146,15 @@ li{
 .pjtitle {
 	font-family: 'SF-Pro-Bold';
 	-webkit-font-smoothing: antialiased;
-	font-size: 64px;
+	font-size: 60px;
 	padding-bottom: 24px;
 	line-height: 78px;
 }
 
 .pjbody {
-	font-family: 'SF-Pro-Semibold';
+	font-family: 'SF-Pro-Regular';
 	-webkit-font-smoothing: antialiased;
-	font-size: 20px;
+	font-size: 18px;
 	color: gray;
 	max-width: 480px;
 	margin: 0 auto;
@@ -163,7 +163,7 @@ li{
 .pjsubtitle {
 	font-family: 'SF-Pro-Semibold';
 	-webkit-font-smoothing: antialiased;
-	font-size: 20px;
+	font-size: 18px;
 	padding-bottom: 80px;
 	padding-top: 10px;
 	background-image: -webkit-linear-gradient(92deg, #f35626, #feab3a);
