--- a/base.css
+++ b/base.css
@@ -13,7 +13,7 @@ body,html{
 	padding:0;
 }
 a{
-	text-decoration: none;
+	text-decoration: underline;
 	color: #2C2C2C;
 }
 a:hover{
@@ -144,6 +144,7 @@ li{
 	margin: 0 auto;
 	width: 800px;
 	text-align: center;
+	padding-bottom: 80px;
 }
 
 .pjtitle {
@@ -167,7 +168,6 @@ li{
 	font-family: 'SF-Pro-Semibold';
 	-webkit-font-smoothing: antialiased;
 	font-size: 18px;
-	padding-bottom: 80px;
 	padding-top: 10px;
 	background-image: -webkit-linear-gradient(92deg, #f35626, #feab3a);
 	-webkit-background-clip: text;
@@ -325,4 +325,10 @@ li{
 	margin-left: 50px;
 	display: inline-block;
 	vertical-align: top;
+}
+
+.app_img {
+	padding-top: 40px;
+	width: 100px;
+	display: inline-block;
 }
