--- a/base.css
+++ b/base.css
@@ -53,12 +53,6 @@ li{
 	src: url(font/SF-Pro-Display-Regular.otf);
 }
 
-@font-face {
-    font-family: ibm;
-    src: url(font/PTMono-Regular.ttf);
-}
-
-
 
 /*HEADER*/
 .info {
@@ -138,6 +132,7 @@ li{
 	width: 1300px;
 	padding: 40px 0 140px 0;
 	margin: 0 auto;
+	text-align: center;
 }
 
 .box_company {
@@ -179,14 +174,10 @@ li{
 }
 
 .pjsubtitle {
-	font-family: 'SF-Pro-Semibold';
+	font-family: 'SF-Pro-Regular';
 	-webkit-font-smoothing: antialiased;
-	font-size: 18px;
+	font-size: 16px;
 	padding-top: 10px;
-	background-image: -webkit-linear-gradient(92deg, #f35626, #feab3a);
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
-	-webkit-animation: hue 10s infinite linear;
 }
 @-webkit-keyframes hue {
 	from {
@@ -349,4 +340,26 @@ li{
 	padding-top: 40px;
 	width: 100px;
 	display: inline-block;
+}
+
+/*PJ06*/
+.pj06 {
+	width: 100%;
+	background-color: #fbfbfb;
+}
+
+.img_box {
+	text-align: center;
+}
+
+.pj06 .left_img {
+	max-width: 800px;
+	display: inline-block;
+	vertical-align: top;
+}
+.pj06 .right_img {
+	max-width: 340px;
+	margin-left: 50px;
+	display: inline-block;
+	vertical-align: top;
 }
