--- a/base.css
+++ b/base.css
@@ -170,6 +170,18 @@ a:hover {
 }
 
 
+.img_pj03 {
+	width: 100%;
+	display: inline-block;
+	padding-left: 4%;
+	text-align: left;
+}
+
+.img_pj03 img {
+	width: 90%;
+}
+
+
 
 .contact_info {
 	width: 100%;
@@ -185,3 +197,5 @@ a:hover {
 	padding-left: 13%;
 	padding-right: 280px;
 }
+
+
