--- a/base.css
+++ b/base.css
@@ -35,6 +35,7 @@ a:hover {
 /*HEADER*/
 .intro {
 	width: 100%;
+	max-width: 1800px;
 	margin: 0 auto;
 	padding-top: 160px;
 	padding-bottom: 120px;
@@ -52,6 +53,7 @@ a:hover {
 /*pj01*/
 .pj01 {
 	width: 100%;
+	max-width: 1800px;
 	margin: 0 auto;
 	padding-top: 120px;
 	padding-bottom: 120px;
@@ -113,6 +115,7 @@ a:hover {
 /*pj02*/
 .pj02 {
 	width: 100%;
+	max-width: 1800px;
 	margin: 0 auto;
 	padding-top: 120px;
 	padding-bottom: 160px;
@@ -197,5 +200,3 @@ a:hover {
 	padding-left: 13%;
 	padding-right: 280px;
 }
-
-
