--- a/base.css
+++ b/base.css
@@ -3,6 +3,7 @@
 body,html{
 	margin: 0;
 	font-family: 'Aeonik-Regular';
+	overflow-x: hidden
 }
 *{
 	margin:0;
@@ -77,20 +78,20 @@ a:hover {
 }
 
 .description_pj01 {
-	width: 60%;
+	width: 50%;
 	padding-left: 13%;
 	display: inline-block;
 }
 
 .description_pj01 p {
-	font-size: 18px;
-	line-height: 26px;
+	font-size: 20px;
+	line-height: 30px;
 	-webkit-font-smoothing: antialiased;
 }
 
 .description_pj01 h1 {
 	font-weight: normal;
-	font-size: 44px;
+	font-size: 46px;
 	letter-spacing: 0.5px;
 	padding-bottom: 10px;
 	-webkit-font-smoothing: antialiased;
@@ -100,14 +101,19 @@ a:hover {
 	background-color: #000000;
 	border: none;
 	color: #ffffff;
-	border-radius: 100px;
-	padding: 10px 20px;
+	border-radius: 2px;
+	padding: 14px 20px;
 	text-align: center;
 	text-decoration: none;
 	display: inline-block;
 	font-size: 16px;
 	margin-top: 32px;
+	-webkit-font-smoothing: antialiased;
 }
+
+.visible_pj01 {
+  display: none;
+  }
 
 
 
@@ -140,20 +146,20 @@ a:hover {
 }
 
 .description_pj02 {
-	width: 60%;
+	width: 50%;
 	padding-right: 13%;
 	display: inline-block;
 }
 
 .description_pj02 p {
-	font-size: 18px;
-	line-height: 26px;
+	font-size: 20px;
+    	line-height: 30px;
 	-webkit-font-smoothing: antialiased;
 }
 
 .description_pj02 h1 {
 	font-weight: normal;
-	font-size: 44px;
+	font-size: 46px;
 	letter-spacing: 0.5px;
 	padding-bottom: 10px;
 	-webkit-font-smoothing: antialiased;
@@ -199,4 +205,84 @@ a:hover {
 	letter-spacing: 0px;
 	padding-left: 13%;
 	padding-right: 280px;
+}
+
+
+/*nlo*/
+.title {
+	width: 100%;
+	max-width: 1800px;
+	margin: 0 auto;
+	padding-top: 160px;
+}
+.title p {
+	font-size: 44px;
+	line-height: 52px;
+	padding-left: 13%;
+	padding-right: 13%;
+	-webkit-font-smoothing: antialiased;
+}
+.title_sml {
+	width: 100%;
+	max-width: 1800px;
+	margin: 0 auto;
+	padding-bottom: 16px;
+}
+.title_sml p {
+	font-size: 32px;
+	line-height: 38px;
+	padding-left: 13%;
+	padding-right: 13%;
+	-webkit-font-smoothing: antialiased;
+}
+
+.sub_info {
+    width: 100%;
+    height: 100%;
+    max-width: 1800px;
+    margin: 0 auto;
+    padding-bottom: 44px;
+    padding-top: 140px;
+    font-size: 20px;
+    line-height: 28px;
+    overflow:auto;
+}
+.left {
+    width: 33%;
+    padding-left: 13%;
+    padding-right: 3%;
+    display: inline-block;
+    -webkit-font-smoothing: antialiased;
+    float:left;
+}
+.right {
+    width: 33%;
+    padding-right: 13%;
+    display: inline-block;
+    -webkit-font-smoothing: antialiased;
+    float:left;
+}
+
+.nlo_img01{
+    width: 100%;
+    max-width: 1800px;
+    margin: 0 auto;
+    background-color: #F6F6F6;
+    padding: 60px 0 60px 0;
+}
+.img_in{
+    padding-left: 13%;
+    padding-right: 13%;
+}
+.nlo_img01 img{
+    width: 100%;
+}
+.nlo_img01 video{
+    width: 100%;
+}
+
+
+
+@media only screen and (max-width: 600px) {
+
 }
